@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-02-19 Kimmo
+ PATCH: [ 1663012 ] Fix total count for compare progress dialog
+  Src: DirCompProgressDlg.cpp DirCompProgressDlg.h
+
 2007-02-17 Jan Hryz
  Czech translation - update
   Src/Languages/Czech/MergeCzech.rc
